--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -19,7 +19,7 @@ services:
       context: ./games-with-words-api
       dockerfile: Dockerfile
     volumes:
-      - ./api:/usr/src/app
+      - ./games-with-words-api:/usr/src/app
     command: bash start.debug.sh
     depends_on: 
       - "message-queue"
@@ -34,7 +34,7 @@ services:
       context: ./games-with-words-worker
       dockerfile: Dockerfile
     volumes:
-      - ./worker:/usr/src/app
+      - ./games-with-words-worker:/usr/src/app
     command: bash start.debug.sh
     depends_on: 
       - "message-queue"
@@ -48,3 +48,24 @@ services:
       - 5672
     ports:
       - 8080:15672
+  db-writer:
+    image: games-with-words-db-writer:latest
+    build:
+      context: ./games-with-words-db-writer
+      dockerfile: Dockerfile
+    volumes:
+      - ./games-with-words-db-writer:/usr/src/app
+    command: bash start.debug.sh
+    depends_on: 
+      - "message-queue"
+    environment:
+      - AMPQ_ADDRESS=amqp://message-queue:5672     
+      - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+    links:
+      - message-queue
+      - db:db
+  db:
+    image: postgres:latest
+    environment: 
+      - "POSTGRES_DB=games-with-words-development"
+      - "POSTGRES_USER=postgres"
