--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -48,13 +48,13 @@ services:
       - 5672
     ports:
       - 8080:15672
-  db-writer:
-    image: games-with-words-db-writer:latest
+  db-worker:
+    image: games-with-words-db-worker:latest
     build:
-      context: ./games-with-words-db-writer
+      context: ./games-with-words-db-worker<tab>
       dockerfile: Dockerfile
     volumes:
-      - ./games-with-words-db-writer:/usr/src/app
+      - ./games-with-words-db-worker:/usr/src/app
     command: bash start.debug.sh
     depends_on: 
       - "message-queue"
