--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,25 +4,17 @@ version: '2'
 services:
   nginx:
     image: pushkinl3/games-with-words-nginx:latest
-    build:
-      context: ./games-with-words-nginx
-      dockerfile: Dockerfile
     ports:
       - "80:80"
     links: 
       - api:api
   api:
     image: pushkinl3/games-with-words-api:latest
-    expose: 
-      - "3000"
-    build:
-      context: ./games-with-words-api
-      dockerfile: Dockerfile
-    volumes:
-      - ./games-with-words-api:/usr/src/app
+    ports: 
+      - "3000:3000"
     command: bash start.debug.sh
-    depends_on: 
-      - "message-queue"
+    # depends_on: 
+    #   - "message-queue"
     environment:
       - NODE_ENV=production
       - AMPQ_ADDRESS=amqp://message-queue:5672     
@@ -30,37 +22,24 @@ services:
       - message-queue
   worker:
     image: pushkinl3/games-with-words-worker:latest
-    build:
-      context: ./games-with-words-worker
-      dockerfile: Dockerfile
-    volumes:
-      - ./games-with-words-worker:/usr/src/app
     command: bash start.debug.sh
-    depends_on: 
-      - "message-queue"
+    # depends_on: 
+    #   - "message-queue"
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672     
     links:
       - message-queue
   message-queue:
     image: rabbitmq:management
-    expose:
+    ports:
       - 5672
     ports:
       - 8080:15672
   db-worker:
     image: pushkinl3/games-with-words-db-worker:latest
-    build:
-      context: ./games-with-words-db-worker
-      dockerfile: Dockerfile
-    volumes:
-      - ./games-with-words-db-worker:/usr/src/app
     command: bash start.debug.sh
-    ports: 
-      - "5858:5858"
-      - "6000:6000"
-    depends_on: 
-      - "message-queue"
+    # depends_on: 
+    #   - "message-queue"
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672     
       - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
