--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -59,6 +59,14 @@ services:
       - 5672
     ports:
       - 8080:15672
+  transactiondb:
+    image: pushkinl3/transactiondb
+    build:
+      context: ./
+      dockerfile: Dockerfile.transactiondb
+    environment:
+      - "POSTGRES_DB=transactions"
+      - "POSTGRES_USER=postgres"
   db-worker:
     image: pushkinl3/games-with-words-db-worker:latest
     build:
@@ -75,9 +83,11 @@ services:
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
       - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+      - TRANSACTION_DATABASE_URL=postgres://postgres:postgres@transactiondb/transactions  
     links:
       - message-queue
       - db:db
+      - transactiondb:transactiondb
   db:
     image: postgres:latest
     environment:
