--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -2,17 +2,6 @@
 version: '2'
 
 services:
-  cron:
-      image: pushkinl3/games-with-words-cron
-      build:
-        context: ./games-with-words-cron
-        dockerfile: Dockerfile
-      environment:
-        - AMPQ_ADDRESS=amqp://message-queue:5672
-        - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
-      links:
-        - message-queue
-        - db:db
   nginx:
     image: pushkinl3/games-with-words-nginx:latest
     build:
@@ -59,14 +48,6 @@ services:
       - 5672
     ports:
       - 8080:15672
-  transactiondb:
-    image: pushkinl3/transactiondb
-    build:
-      context: ./
-      dockerfile: Dockerfile.transactiondb
-    environment:
-      - "POSTGRES_DB=transactions"
-      - "POSTGRES_USER=postgres"
   db-worker:
     image: pushkinl3/games-with-words-db-worker:latest
     build:
@@ -92,4 +73,23 @@ services:
     image: postgres:latest
     environment:
       - "POSTGRES_DB=games-with-words-development"
+      - "POSTGRES_USER=postgres"
+  cron:
+      image: pushkinl3/games-with-words-cron:latest
+      build:
+        context: ./games-with-words-cron
+        dockerfile: Dockerfile
+      environment:
+        - AMPQ_ADDRESS=amqp://message-queue:5672
+        - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+      links:
+        - message-queue
+        - db:db
+  transactiondb:
+    image: pushkinl3/games-with-words-transactiondb:latest
+    build:
+      context: ./
+      dockerfile: Dockerfile.transactiondb
+    environment:
+      - "POSTGRES_DB=transactions"
       - "POSTGRES_USER=postgres"
