--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,7 +12,7 @@ services:
     image: pushkinl3/games-with-words-api:latest
     ports: 
       - "3000:3000"
-    command: bash start.debug.sh
+    command: bash start.sh
     # depends_on: 
     #   - "message-queue"
     environment:
@@ -22,7 +22,7 @@ services:
       - message-queue
   worker:
     image: pushkinl3/games-with-words-worker:latest
-    command: bash start.debug.sh
+    command: bash start.sh
     # depends_on: 
     #   - "message-queue"
     environment:
@@ -37,7 +37,7 @@ services:
       - 8080:15672
   db-worker:
     image: pushkinl3/games-with-words-db-worker:latest
-    command: bash start.debug.sh
+    command: bash start.sh
     # depends_on: 
     #   - "message-queue"
     environment:
@@ -46,8 +46,22 @@ services:
     links:
       - message-queue
       - db:db
+      - transactiondb:transactiondb
   db:
     image: postgres:latest
     environment: 
       - "POSTGRES_DB=games-with-words-development"
+      - "POSTGRES_USER=postgres"
+  cron:
+      image: pushkinl3/games-with-words-cron:latest
+      environment:
+        - AMPQ_ADDRESS=amqp://message-queue:5672
+        - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+      links:
+        - message-queue
+        - db:db
+  transactiondb:
+    image: pushkinl3/games-with-words-transactiondb:latest
+    environment:
+      - "POSTGRES_DB=transactions"
       - "POSTGRES_USER=postgres"
