--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,44 +3,60 @@ version: '2'
 
 services:
   nginx:
-    image: games-with-words-nginx:latest
-    build:
-      context: ./games-with-words-nginx
-      dockerfile: Dockerfile
+    image: pushkinl3/games-with-words-nginx:latest
     ports:
       - "80:80"
-    links: 
+    links:
       - api:api
   api:
-    image: games-with-words-api:latest
-    expose: 
+    image: pushkinl3/games-with-words-api:latest
+    expose:
       - "3000"
-    build:
-      context: ./games-with-words-api
-      dockerfile: Dockerfile
-    volumes:
-      - ./api:/usr/src/app
-    depends_on: 
-      - "message-queue"
+    command: bash start.sh
     environment:
       - NODE_ENV=production
-      - AMPQ_ADDRESS=amqp://message-queue:5672     
+      - AMPQ_ADDRESS=amqp://message-queue:5672
     links:
       - message-queue
   worker:
-    image: games-with-words-worker:latest
-    build:
-      context: ./games-with-words-worker
-      dockerfile: Dockerfile
-    volumes:
-      - ./worker:/usr/src/app
-    depends_on: 
-      - "message-queue"
+    image: pushkinl3/games-with-words-worker:latest
+    command: bash start.sh
     environment:
-      - AMPQ_ADDRESS=amqp://message-queue:5672     
+      - AMPQ_ADDRESS=amqp://message-queue:5672
     links:
       - message-queue
   message-queue:
     image: rabbitmq
     expose:
       - 5672
+  db-worker:
+    image: pushkinl3/games-with-words-db-worker:latest
+    command: bash start.sh
+    ports:
+      - "6000:6000"
+    environment:
+      - AMPQ_ADDRESS=amqp://message-queue:5672
+      - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+      - TRANSACTION_DATABASE_URL=postgres://postgres:postgres@transactiondb/transactions  
+    links:
+      - message-queue
+      - db:db
+      - transactiondb:transactiondb
+  db:
+    image: postgres:latest
+    environment:
+      - "POSTGRES_DB=games-with-words-development"
+      - "POSTGRES_USER=postgres"
+  cron:
+    image: pushkinl3/games-with-words-cron:latest
+    environment:
+      - AMPQ_ADDRESS=amqp://message-queue:5672
+      - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+    links:
+      - message-queue
+      - db:db
+  transactiondb:
+    image: pushkinl3/games-with-words-transactiondb:latest
+    environment:
+      - "POSTGRES_DB=transactions"
+      - "POSTGRES_USER=postgres"
