--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -3,23 +3,23 @@ version: '2'
 
 services:
   nginx:
-    image: pushkinl3/games-with-words-nginx:latest
+    image: pushkinl3/pushkin-server:latest
     build:
-      context: ./games-with-words-nginx
+      context: ./pushkin-server
       dockerfile: Dockerfile
     ports:
       - "80:80"
     links:
       - api:api
   api:
-    image: pushkinl3/games-with-words-api:latest
+    image: pushkinl3/pushkin-api:latest
     expose:
       - "3000"
     build:
-      context: ./games-with-words-api
+      context: ./pushkin-api
       dockerfile: Dockerfile
     volumes:
-      - ./games-with-words-api:/usr/src/app
+      - ./pushkin-api:/usr/src/app
     command: bash start.sh
     depends_on:
       - "message-queue"
@@ -29,12 +29,12 @@ services:
     links:
       - message-queue
   worker:
-    image: pushkinl3/games-with-words-worker:latest
+    image: pushkinl3/pushkin-worker:latest
     build:
-      context: ./games-with-words-worker
+      context: ./pushkin-worker
       dockerfile: Dockerfile
     volumes:
-      - ./games-with-words-worker:/usr/src/app
+      - ./pushkin-worker:/usr/src/app
     command: bash start.sh
     depends_on:
       - "message-queue"
@@ -49,12 +49,12 @@ services:
     ports:
       - 8080:15672
   db-worker:
-    image: pushkinl3/games-with-words-db-worker:latest
+    image: pushkinl3/pushkin-db:latest
     build:
-      context: ./games-with-words-db-worker
+      context: ./pushkin-db
       dockerfile: Dockerfile
     volumes:
-      - ./games-with-words-db-worker:/usr/src/app
+      - ./pushkin-db:/usr/src/app
     command: bash start.sh
     ports:
       - "5858:5858"
@@ -63,7 +63,7 @@ services:
       - "message-queue"
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
-      - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+      - DATABASE_URL=postgres://postgres:postgres@db/pushkin-development
       - TRANSACTION_DATABASE_URL=postgres://postgres:postgres@transactiondb/transactions  
     links:
       - message-queue
@@ -72,21 +72,21 @@ services:
   db:
     image: postgres:latest
     environment:
-      - "POSTGRES_DB=games-with-words-development"
+      - "POSTGRES_DB=pushkin-development"
       - "POSTGRES_USER=postgres"
   cron:
-      image: pushkinl3/games-with-words-cron:latest
+      image: pushkinl3/pushkin-cron:latest
       build:
-        context: ./games-with-words-cron
+        context: ./pushkin-cron
         dockerfile: Dockerfile
       environment:
         - AMPQ_ADDRESS=amqp://message-queue:5672
-        - DATABASE_URL=postgres://postgres:postgres@db/games-with-words-development
+        - DATABASE_URL=postgres://postgres:postgres@db/pushkin-development
       links:
         - message-queue
         - db:db
   transactiondb:
-    image: pushkinl3/games-with-words-transactiondb:latest
+    image: pushkinl3/pushkin-transactiondb:latest
     build:
       context: ./
       dockerfile: Dockerfile.transactiondb
