update docker compose

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -40,6 +40,7 @@ services:
       - "message-queue"
     environment:
       - AMPQ_ADDRESS=amqp://message-queue:5672
+      - QUEUE=whichenglish
     links:
       - message-queue
   message-queue:
