--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,17 +1,17 @@
 version: '2'
 services:
   cron:
-    image: pushkinl3/games-with-words-cron:latest
+    image: 'pushkinl3/games-with-words-cron:latest'
     environment:
-      AMPQ_ADDRESS: amqp://message-queue:5672
-      DATABASE_URL:  "DATABASE_URL"
+      AMPQ_ADDRESS: 'amqp://message-queue:5672'
+      DATABASE_URL: DATABASE_URL
     links:
-      - message-queue:message-queue
+      - 'message-queue:message-queue'
   api-balancer:
-    image: rancher/lb-service-haproxy:v0.4.9
+    image: 'rancher/lb-service-haproxy:v0.4.9'
     ports:
-      - 80:80/tcp
-      - 8080:8080/tcp
+      - '80:80/tcp'
+      - '8080:8080/tcp'
     labels:
       io.rancher.container.agent.role: environmentAdmin
       io.rancher.container.create_agent: 'true'
@@ -20,48 +20,37 @@ services:
     expose:
       - '5672'
   db-worker:
-    image: pushkinl3/games-with-words-db-worker:latest
+    image: 'pushkinl3/games-with-words-db-worker:latest'
     environment:
-      AMPQ_ADDRESS: amqp://message-queue:5672
-      DATABASE_URL:  "DATABASE_URL"
-      TRANSACTION_DATABASE_URL: "TRANSACTION_DATABASE_URL"
+      - AMPQ_ADDRESS='amqp://message-queue:5672'
+      - DATABASE_URL=DATABASE_URL
+      - TRANSACTION_DATABASE_URL=TRANSACTION_DATABASE_URL
     links:
-      - message-queue:message-queue
+      - 'message-queue:message-queue'
     command:
-      - bash 
+      - bash
       - start.sh
     labels:
       io.rancher.container.pull_image: always
   nginx:
-    image: pushkinl3/games-with-words-nginx:latest
+    image: 'pushkinl3/games-with-words-nginx:latest'
     links:
-      - api:api
+      - 'api:api'
     ports:
-      - 80:80/tcp
+      - '80:80/tcp'
     labels:
       io.rancher.container.pull_image: always
   api:
-    image: pushkinl3/games-with-words-api:latest
+    image: 'pushkinl3/games-with-words-api:latest'
     environment:
-      AMPQ_ADDRESS: amqp://message-queue:5672
-      NODE_ENV: production
+      - AMPQ_ADDRESS='amqp://message-queue:5672'
+      - NODE_ENV=production
     links:
-      - message-queue:message-queue
+      - 'message-queue:message-queue'
     expose:
       - '3000'
     command:
-      - bash 
-      - start.sh
-    labels:
-      io.rancher.container.pull_image: always
-  worker:
-    image: pushkinl3/games-with-words-worker:latest
-    environment:
-      AMPQ_ADDRESS: amqp://message-queue:5672
-    links:
-      - message-queue:message-queue
-    command:
-      - bash 
+      - bash
       - start.sh
     labels:
       io.rancher.container.pull_image: always
