--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -39,6 +39,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - './pushkin-db:/usr/src/app'
+      - /usr/src/app/node_modules/
     command: bash start.debug.sh
     depends_on:
       - message-queue
