--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,21 @@
 [submodule "pushkin-react"]
 	path = pushkin-react
 	url = https://github.com/pushkin-consortium/pushkin-react.git
+[submodule "gww-front-end"]
+	path = gww-front-end
+	url = https://github.com/gameswithwords/gww-front-end.git
+[submodule "gww-server"]
+	path = gww-server
+	url = https://github.com/gameswithwords/gww-server.git
+[submodule "gww-db"]
+	path = gww-db
+	url = https://github.com/gameswithwords/gww-db.git
+[submodule "gww-api"]
+	path = gww-api
+	url = https://github.com/gameswithwords/gww-api.git
+[submodule "gww-worker"]
+	path = gww-worker
+	url = https://github.com/gameswithwords/gww-worker.git
+[submodule "gww-cron"]
+	path = gww-cron
+	url = https://github.com/gameswithwords/gww-cron.git
