added exp-workers submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "cron"]
 	path = cron
 	url = https://github.com/gameswithwords/cron.git
+[submodule "exp-workers"]
+	path = exp-workers
+	url = https://github.com/gameswithwords/exp-workers.git
