--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "cron"]
 	path = cron
 	url = https://github.com/gameswithwords/cron.git
+[submodule "workers"]
+	path = workers
+	url = https://github.com/gameswithwords/workers.git
