--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -82,4 +82,19 @@ services:
       - '5432'
     ports:
       - '5433:5432'
+  whichenglish:
+    image: 'DOCKERHUB_ID/whichenglish:latest'
+    build:
+      context: ./workers/whichenglish
+      dockerfile: Dockerfile
+    volumes:
+      - './workers/whichenglish:/usr/src/app'
+    command: bash start.debug.sh
+    depends_on:
+      - message-queue
+    environment:
+      - 'AMPQ_ADDRESS=amqp://message-queue:5672'
+      - QUEUE=whichenglish
+    links:
+      - message-queue
       
