--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -68,3 +68,13 @@ services:
       - QUEUE=whichenglish
     links:
       - message-queue
+  listener:
+    image: 'DOCKERHUB_ID/pushkin-worker:latest'
+    command: bash start.sh
+    depends_on:
+      - message-queue
+    environment:
+      - 'AMPQ_ADDRESS=amqp://message-queue:5672'
+      - QUEUE=listener
+    links:
+      - message-queue
